[package]
name = "sqgui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
raw-window-handle = "0.6.2"
rodio = "0.20.1"
tokio = { version = "1.45.0", features = ["full"] }
wgpu = "24.0.1"

[dependencies.sdl3]
version = "0.14.16"
features = ["build-from-source", "raw-window-handle"]
