[package]
name = "sq"
version = "0.1.0"
edition = "2024"

[lib]
name = "sq"
path = "src/lib.rs"

[[bin]]
name = "sq"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
raw-window-handle = "0.6.2"
rodio = "0.20.1"
tokio = { version = "1.45.0", features = ["full"] }
wgpu = "24.0.1"
bytemuck = { version = "1.16", features = ["derive"] } 
cgmath = "0.18.0"
slotmap = { version = "1.0.7", features = ["serde"]}
hecs = "0.10.5"
smart-default = "0.7.1"

[dependencies.sdl3]
version = "0.14.16"
features = ["build-from-source", "raw-window-handle"]

[dependencies.image]
version = "0.25.6"
default-features = false
features = ["png", "jpeg"]
